[build-system]
requires = ["setuptools>=80.3.1", "wheel", "setuptools_scm[toml]>=8.3.1", "cffi"]
build-backend = "setuptools.build_meta"

[project]
name = "netsnmp-cffi"
description = "CFFI interface to Net-SNMP"
authors = [{name="Sikt - Norwegian Agency for Shared Services in Education and Research", email="kontakt@sikt.no"}]
maintainers = [{name="Morten Brekkevold", email="morten.brekkevold@sikt.no"}]
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "cffi",
]
dynamic = ["version"]

[project.urls]
"GitHub" = "https://github.com/Uninett/netsnmp-cffi"
"Changelog" = "https://github.com/Uninett/netsnmp-cffi/blob/master/CHANGELOG.md"

[project.scripts]
asnmpget = "netsnmpy.programs.asnmpget:main"

[dependency-groups]
# Tools that are useful for developers of this package
dev = [
    "build",
    "ipython",
    "pre-commit",
    "ruff",
    "setuptools>=80.3.1",
    "towncrier",
    "twine",
]
# Tools that are required for testing of this package
test = [
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "retry",
    "snmpsim>=1.0,!=1.1.6",
    "pyasyncore; python_version >= '3.12'",
    "tox",
    "tox-uv",
]

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = [
    "*.rst",
]

[tool.setuptools.exclude-package-data]
"*" = ["tests/"]

[tool.setuptools_scm]
write_to = "src/netsnmpy/version.py"

[tool.ruff]
line-length = 88
target-version = "py39"


[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't need coverage for ellipsis used for type annotations
    "\\.\\.\\.",
    # Don't complain about lines excluded unless type checking
    "if TYPE_CHECKING:",
    # We don't need tests to cover unimplementedness
    "raise NotImplementedError",
]

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/netsnmp-cffi/issues/{issue})"
wrap = false

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
